--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@ngxs/store": "^18.0.0",
+    "flowbite": "^2.3.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.5.0",
     "zone.js": "~0.14.0"
