--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "typescript": "~5.4.0"
+    "ts-loader": "^9.5.1",
+    "typescript": "~5.4.0",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
