--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
             }
           },
           "options": {
-            "assets": [],
+            "assets": [
+              {"glob":"_redirects","input":"src","output":"/"}
+            ],
             "index": "src/index.html",
             "browser": "src/main.ts",
             "outputPath": "dist/demo",
